Segunda Entrega/y.output
Terminals unused in grammar

   C_A
   C_C


Rules useless in parser due to conflicts

   43 $@11: /* empty */


State 58 conflicts: 1 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: program

    2 program: sentencia
    3        | program sentencia

    4 $@1: /* empty */

    5 sentencia: DEFVAR $@1 declaraciones ENDDEF
    6          | ID ASIG_ESP ID
    7          | asignacion PUNTO_Y_COMA
    8          | decision
    9          | iteracion
   10          | let
   11          | entrada
   12          | salida

   13 declaraciones: declaracion
   14              | declaraciones declaracion

   15 declaracion: INT DOSPUNTOS lista_ids
   16            | FLOAT DOSPUNTOS lista_ids
   17            | STRING DOSPUNTOS lista_ids

   18 lista_ids: ID
   19          | lista_ids PUNTO_Y_COMA ID

   20 asignacion: ID OP_ASIG expresion
   21           | ID OP_ASIG constanteString

   22 salida: DISPLAY constanteString PUNTO_Y_COMA

   23 entrada: GET ID PUNTO_Y_COMA

   24 iteracion: WHILE P_A condicion P_C L_A sentencia L_C

   25 decision: IF P_A condicion P_C L_A sentencia L_C

   26 $@2: /* empty */

   27 $@3: /* empty */

   28 decision: IF P_A condicion P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

   29 $@4: /* empty */

   30 condicion: expresion $@4 CMP_MAY expresion

   31 $@5: /* empty */

   32 condicion: expresion $@5 CMP_MEN expresion

   33 $@6: /* empty */

   34 condicion: expresion $@6 CMP_MAYI expresion

   35 $@7: /* empty */

   36 condicion: expresion $@7 CMP_MENI expresion

   37 $@8: /* empty */

   38 condicion: expresion $@8 CMP_DIST expresion

   39 $@9: /* empty */

   40 condicion: expresion $@9 CMP_IGUAL expresion

   41 $@10: /* empty */

   42 condicion: P_A condicion $@10 P_C AND P_A condicion P_C

   43 $@11: /* empty */

   44 condicion: P_A condicion $@11 P_C OR P_A condicion P_C

   45 $@12: /* empty */

   46 condicion: NOT expresion $@12 CMP_MAY expresion

   47 $@13: /* empty */

   48 condicion: NOT expresion $@13 CMP_MEN expresion

   49 $@14: /* empty */

   50 condicion: NOT expresion $@14 CMP_MAYI expresion

   51 $@15: /* empty */

   52 condicion: NOT expresion $@15 CMP_MENI expresion

   53 $@16: /* empty */

   54 condicion: NOT expresion $@16 CMP_DIST expresion

   55 $@17: /* empty */

   56 condicion: NOT expresion $@17 CMP_IGUAL expresion

   57 expresion: expresion OP_SUM termino
   58          | expresion OP_RES termino
   59          | termino

   60 termino: termino OP_MUL factor
   61        | termino OP_DIV factor
   62        | factor

   63 factor: P_A expresion P_C
   64       | ID
   65       | constanteNumerica

   66 constanteNumerica: CONST_INT
   67                  | CONST_REAL

   68 constanteString: CONST_STR

   69 $@18: /* empty */

   70 let: LET_SIM $@18 cont_ids OP_IGUAL P_A cont_exp P_C

   71 cont_ids: cont_ids COMA ID
   72         | ID

   73 cont_exp: cont_exp PUNTO_Y_COMA expresion
   74         | expresion


Terminals, with rules where they appear

$end (0) 0
error (256)
ASIG_ESP (258) 6
DEFVAR (259) 5
ENDDEF (260) 5
INT (261) 15
FLOAT (262) 16
STRING (263) 17
CONST_REAL (264) 67
CONST_INT (265) 66
CONST_STR (266) 68
DISPLAY (267) 22
GET (268) 23
IF (269) 25 28
ELSE (270) 28
WHILE (271) 24
P_A (272) 24 25 28 42 44 63 70
P_C (273) 24 25 28 42 44 63 70
C_A (274)
C_C (275)
L_A (276) 24 25 28
L_C (277) 24 25 28
PUNTO_Y_COMA (278) 7 19 22 23 73
COMA (279) 71
DOSPUNTOS (280) 15 16 17
CMP_MAY (281) 30 46
CMP_MEN (282) 32 48
CMP_MAYI (283) 34 50
CMP_MENI (284) 36 52
CMP_DIST (285) 38 54
CMP_IGUAL (286) 40 56
OP_SUM (287) 57
OP_RES (288) 58
OP_DIV (289) 61
OP_MUL (290) 60
AND (291) 42
OR (292) 44
NOT (293) 46 48 50 52 54 56
ID (294) 6 18 19 20 21 23 64 71 72
OP_ASIG (295) 20 21
LET_SIM (296) 70
OP_IGUAL (297) 70


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
programa (44)
    on left: 1, on right: 0
program (45)
    on left: 2 3, on right: 1 3
sentencia (46)
    on left: 5 6 7 8 9 10 11 12, on right: 2 3 24 25 28
$@1 (47)
    on left: 4, on right: 5
declaraciones (48)
    on left: 13 14, on right: 5 14
declaracion (49)
    on left: 15 16 17, on right: 13 14
lista_ids (50)
    on left: 18 19, on right: 15 16 17 19
asignacion (51)
    on left: 20 21, on right: 7
salida (52)
    on left: 22, on right: 12
entrada (53)
    on left: 23, on right: 11
iteracion (54)
    on left: 24, on right: 9
decision (55)
    on left: 25 28, on right: 8
$@2 (56)
    on left: 26, on right: 28
$@3 (57)
    on left: 27, on right: 28
condicion (58)
    on left: 30 32 34 36 38 40 42 44 46 48 50 52 54 56, on right: 24
    25 28 42 44
$@4 (59)
    on left: 29, on right: 30
$@5 (60)
    on left: 31, on right: 32
$@6 (61)
    on left: 33, on right: 34
$@7 (62)
    on left: 35, on right: 36
$@8 (63)
    on left: 37, on right: 38
$@9 (64)
    on left: 39, on right: 40
$@10 (65)
    on left: 41, on right: 42
$@11 (66)
    on left: 43, on right: 44
$@12 (67)
    on left: 45, on right: 46
$@13 (68)
    on left: 47, on right: 48
$@14 (69)
    on left: 49, on right: 50
$@15 (70)
    on left: 51, on right: 52
$@16 (71)
    on left: 53, on right: 54
$@17 (72)
    on left: 55, on right: 56
expresion (73)
    on left: 57 58 59, on right: 20 30 32 34 36 38 40 46 48 50 52 54
    56 57 58 63 73 74
termino (74)
    on left: 60 61 62, on right: 57 58 59 60 61
factor (75)
    on left: 63 64 65, on right: 60 61 62
constanteNumerica (76)
    on left: 66 67, on right: 65
constanteString (77)
    on left: 68, on right: 21 22
let (78)
    on left: 70, on right: 10
$@18 (79)
    on left: 69, on right: 70
cont_ids (80)
    on left: 71 72, on right: 70 71
cont_exp (81)
    on left: 73 74, on right: 70 73


state 0

    0 $accept: . programa $end

    DEFVAR   shift, and go to state 1
    DISPLAY  shift, and go to state 2
    GET      shift, and go to state 3
    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    ID       shift, and go to state 6
    LET_SIM  shift, and go to state 7

    programa    go to state 8
    program     go to state 9
    sentencia   go to state 10
    asignacion  go to state 11
    salida      go to state 12
    entrada     go to state 13
    iteracion   go to state 14
    decision    go to state 15
    let         go to state 16


state 1

    5 sentencia: DEFVAR . $@1 declaraciones ENDDEF

    $default  reduce using rule 4 ($@1)

    $@1  go to state 17


state 2

   22 salida: DISPLAY . constanteString PUNTO_Y_COMA

    CONST_STR  shift, and go to state 18

    constanteString  go to state 19


state 3

   23 entrada: GET . ID PUNTO_Y_COMA

    ID  shift, and go to state 20


state 4

   25 decision: IF . P_A condicion P_C L_A sentencia L_C
   28         | IF . P_A condicion P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    P_A  shift, and go to state 21


state 5

   24 iteracion: WHILE . P_A condicion P_C L_A sentencia L_C

    P_A  shift, and go to state 22


state 6

    6 sentencia: ID . ASIG_ESP ID
   20 asignacion: ID . OP_ASIG expresion
   21           | ID . OP_ASIG constanteString

    ASIG_ESP  shift, and go to state 23
    OP_ASIG   shift, and go to state 24


state 7

   70 let: LET_SIM . $@18 cont_ids OP_IGUAL P_A cont_exp P_C

    $default  reduce using rule 69 ($@18)

    $@18  go to state 25


state 8

    0 $accept: programa . $end

    $end  shift, and go to state 26


state 9

    1 programa: program .
    3 program: program . sentencia

    DEFVAR   shift, and go to state 1
    DISPLAY  shift, and go to state 2
    GET      shift, and go to state 3
    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    ID       shift, and go to state 6
    LET_SIM  shift, and go to state 7

    $default  reduce using rule 1 (programa)

    sentencia   go to state 27
    asignacion  go to state 11
    salida      go to state 12
    entrada     go to state 13
    iteracion   go to state 14
    decision    go to state 15
    let         go to state 16


state 10

    2 program: sentencia .

    $default  reduce using rule 2 (program)


state 11

    7 sentencia: asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA  shift, and go to state 28


state 12

   12 sentencia: salida .

    $default  reduce using rule 12 (sentencia)


state 13

   11 sentencia: entrada .

    $default  reduce using rule 11 (sentencia)


state 14

    9 sentencia: iteracion .

    $default  reduce using rule 9 (sentencia)


state 15

    8 sentencia: decision .

    $default  reduce using rule 8 (sentencia)


state 16

   10 sentencia: let .

    $default  reduce using rule 10 (sentencia)


state 17

    5 sentencia: DEFVAR $@1 . declaraciones ENDDEF

    INT     shift, and go to state 29
    FLOAT   shift, and go to state 30
    STRING  shift, and go to state 31

    declaraciones  go to state 32
    declaracion    go to state 33


state 18

   68 constanteString: CONST_STR .

    $default  reduce using rule 68 (constanteString)


state 19

   22 salida: DISPLAY constanteString . PUNTO_Y_COMA

    PUNTO_Y_COMA  shift, and go to state 34


state 20

   23 entrada: GET ID . PUNTO_Y_COMA

    PUNTO_Y_COMA  shift, and go to state 35


state 21

   25 decision: IF P_A . condicion P_C L_A sentencia L_C
   28         | IF P_A . condicion P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 38
    NOT         shift, and go to state 39
    ID          shift, and go to state 40

    condicion          go to state 41
    expresion          go to state 42
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 22

   24 iteracion: WHILE P_A . condicion P_C L_A sentencia L_C

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 38
    NOT         shift, and go to state 39
    ID          shift, and go to state 40

    condicion          go to state 46
    expresion          go to state 42
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 23

    6 sentencia: ID ASIG_ESP . ID

    ID  shift, and go to state 47


state 24

   20 asignacion: ID OP_ASIG . expresion
   21           | ID OP_ASIG . constanteString

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    CONST_STR   shift, and go to state 18
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 49
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45
    constanteString    go to state 50


state 25

   70 let: LET_SIM $@18 . cont_ids OP_IGUAL P_A cont_exp P_C

    ID  shift, and go to state 51

    cont_ids  go to state 52


state 26

    0 $accept: programa $end .

    $default  accept


state 27

    3 program: program sentencia .

    $default  reduce using rule 3 (program)


state 28

    7 sentencia: asignacion PUNTO_Y_COMA .

    $default  reduce using rule 7 (sentencia)


state 29

   15 declaracion: INT . DOSPUNTOS lista_ids

    DOSPUNTOS  shift, and go to state 53


state 30

   16 declaracion: FLOAT . DOSPUNTOS lista_ids

    DOSPUNTOS  shift, and go to state 54


state 31

   17 declaracion: STRING . DOSPUNTOS lista_ids

    DOSPUNTOS  shift, and go to state 55


state 32

    5 sentencia: DEFVAR $@1 declaraciones . ENDDEF
   14 declaraciones: declaraciones . declaracion

    ENDDEF  shift, and go to state 56
    INT     shift, and go to state 29
    FLOAT   shift, and go to state 30
    STRING  shift, and go to state 31

    declaracion  go to state 57


state 33

   13 declaraciones: declaracion .

    $default  reduce using rule 13 (declaraciones)


state 34

   22 salida: DISPLAY constanteString PUNTO_Y_COMA .

    $default  reduce using rule 22 (salida)


state 35

   23 entrada: GET ID PUNTO_Y_COMA .

    $default  reduce using rule 23 (entrada)


state 36

   67 constanteNumerica: CONST_REAL .

    $default  reduce using rule 67 (constanteNumerica)


state 37

   66 constanteNumerica: CONST_INT .

    $default  reduce using rule 66 (constanteNumerica)


state 38

   42 condicion: P_A . condicion $@10 P_C AND P_A condicion P_C
   44          | P_A . condicion $@11 P_C OR P_A condicion P_C
   63 factor: P_A . expresion P_C

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 38
    NOT         shift, and go to state 39
    ID          shift, and go to state 40

    condicion          go to state 58
    expresion          go to state 59
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 39

   46 condicion: NOT . expresion $@12 CMP_MAY expresion
   48          | NOT . expresion $@13 CMP_MEN expresion
   50          | NOT . expresion $@14 CMP_MAYI expresion
   52          | NOT . expresion $@15 CMP_MENI expresion
   54          | NOT . expresion $@16 CMP_DIST expresion
   56          | NOT . expresion $@17 CMP_IGUAL expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 60
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 40

   64 factor: ID .

    $default  reduce using rule 64 (factor)


state 41

   25 decision: IF P_A condicion . P_C L_A sentencia L_C
   28         | IF P_A condicion . P_C L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    P_C  shift, and go to state 61


state 42

   30 condicion: expresion . $@4 CMP_MAY expresion
   32          | expresion . $@5 CMP_MEN expresion
   34          | expresion . $@6 CMP_MAYI expresion
   36          | expresion . $@7 CMP_MENI expresion
   38          | expresion . $@8 CMP_DIST expresion
   40          | expresion . $@9 CMP_IGUAL expresion
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    CMP_MEN    reduce using rule 31 ($@5)
    CMP_MAYI   reduce using rule 33 ($@6)
    CMP_MENI   reduce using rule 35 ($@7)
    CMP_DIST   reduce using rule 37 ($@8)
    CMP_IGUAL  reduce using rule 39 ($@9)
    $default   reduce using rule 29 ($@4)

    $@4  go to state 64
    $@5  go to state 65
    $@6  go to state 66
    $@7  go to state 67
    $@8  go to state 68
    $@9  go to state 69


state 43

   59 expresion: termino .
   60 termino: termino . OP_MUL factor
   61        | termino . OP_DIV factor

    OP_DIV  shift, and go to state 70
    OP_MUL  shift, and go to state 71

    $default  reduce using rule 59 (expresion)


state 44

   62 termino: factor .

    $default  reduce using rule 62 (termino)


state 45

   65 factor: constanteNumerica .

    $default  reduce using rule 65 (factor)


state 46

   24 iteracion: WHILE P_A condicion . P_C L_A sentencia L_C

    P_C  shift, and go to state 72


state 47

    6 sentencia: ID ASIG_ESP ID .

    $default  reduce using rule 6 (sentencia)


state 48

   63 factor: P_A . expresion P_C

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 73
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 49

   20 asignacion: ID OP_ASIG expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 20 (asignacion)


state 50

   21 asignacion: ID OP_ASIG constanteString .

    $default  reduce using rule 21 (asignacion)


state 51

   72 cont_ids: ID .

    $default  reduce using rule 72 (cont_ids)


state 52

   70 let: LET_SIM $@18 cont_ids . OP_IGUAL P_A cont_exp P_C
   71 cont_ids: cont_ids . COMA ID

    COMA      shift, and go to state 74
    OP_IGUAL  shift, and go to state 75


state 53

   15 declaracion: INT DOSPUNTOS . lista_ids

    ID  shift, and go to state 76

    lista_ids  go to state 77


state 54

   16 declaracion: FLOAT DOSPUNTOS . lista_ids

    ID  shift, and go to state 76

    lista_ids  go to state 78


state 55

   17 declaracion: STRING DOSPUNTOS . lista_ids

    ID  shift, and go to state 76

    lista_ids  go to state 79


state 56

    5 sentencia: DEFVAR $@1 declaraciones ENDDEF .

    $default  reduce using rule 5 (sentencia)


state 57

   14 declaraciones: declaraciones declaracion .

    $default  reduce using rule 14 (declaraciones)


state 58

   42 condicion: P_A condicion . $@10 P_C AND P_A condicion P_C
   44          | P_A condicion . $@11 P_C OR P_A condicion P_C

    P_C       reduce using rule 41 ($@10)
    P_C       [reduce using rule 43 ($@11)]
    $default  reduce using rule 41 ($@10)

    $@10  go to state 80
    $@11  go to state 81


state 59

   30 condicion: expresion . $@4 CMP_MAY expresion
   32          | expresion . $@5 CMP_MEN expresion
   34          | expresion . $@6 CMP_MAYI expresion
   36          | expresion . $@7 CMP_MENI expresion
   38          | expresion . $@8 CMP_DIST expresion
   40          | expresion . $@9 CMP_IGUAL expresion
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino
   63 factor: P_A expresion . P_C

    P_C     shift, and go to state 82
    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    CMP_MEN    reduce using rule 31 ($@5)
    CMP_MAYI   reduce using rule 33 ($@6)
    CMP_MENI   reduce using rule 35 ($@7)
    CMP_DIST   reduce using rule 37 ($@8)
    CMP_IGUAL  reduce using rule 39 ($@9)
    $default   reduce using rule 29 ($@4)

    $@4  go to state 64
    $@5  go to state 65
    $@6  go to state 66
    $@7  go to state 67
    $@8  go to state 68
    $@9  go to state 69


state 60

   46 condicion: NOT expresion . $@12 CMP_MAY expresion
   48          | NOT expresion . $@13 CMP_MEN expresion
   50          | NOT expresion . $@14 CMP_MAYI expresion
   52          | NOT expresion . $@15 CMP_MENI expresion
   54          | NOT expresion . $@16 CMP_DIST expresion
   56          | NOT expresion . $@17 CMP_IGUAL expresion
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    CMP_MEN    reduce using rule 47 ($@13)
    CMP_MAYI   reduce using rule 49 ($@14)
    CMP_MENI   reduce using rule 51 ($@15)
    CMP_DIST   reduce using rule 53 ($@16)
    CMP_IGUAL  reduce using rule 55 ($@17)
    $default   reduce using rule 45 ($@12)

    $@12  go to state 83
    $@13  go to state 84
    $@14  go to state 85
    $@15  go to state 86
    $@16  go to state 87
    $@17  go to state 88


state 61

   25 decision: IF P_A condicion P_C . L_A sentencia L_C
   28         | IF P_A condicion P_C . L_A sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    L_A  shift, and go to state 89


state 62

   57 expresion: expresion OP_SUM . termino

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    termino            go to state 90
    factor             go to state 44
    constanteNumerica  go to state 45


state 63

   58 expresion: expresion OP_RES . termino

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    termino            go to state 91
    factor             go to state 44
    constanteNumerica  go to state 45


state 64

   30 condicion: expresion $@4 . CMP_MAY expresion

    CMP_MAY  shift, and go to state 92


state 65

   32 condicion: expresion $@5 . CMP_MEN expresion

    CMP_MEN  shift, and go to state 93


state 66

   34 condicion: expresion $@6 . CMP_MAYI expresion

    CMP_MAYI  shift, and go to state 94


state 67

   36 condicion: expresion $@7 . CMP_MENI expresion

    CMP_MENI  shift, and go to state 95


state 68

   38 condicion: expresion $@8 . CMP_DIST expresion

    CMP_DIST  shift, and go to state 96


state 69

   40 condicion: expresion $@9 . CMP_IGUAL expresion

    CMP_IGUAL  shift, and go to state 97


state 70

   61 termino: termino OP_DIV . factor

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    factor             go to state 98
    constanteNumerica  go to state 45


state 71

   60 termino: termino OP_MUL . factor

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    factor             go to state 99
    constanteNumerica  go to state 45


state 72

   24 iteracion: WHILE P_A condicion P_C . L_A sentencia L_C

    L_A  shift, and go to state 100


state 73

   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino
   63 factor: P_A expresion . P_C

    P_C     shift, and go to state 82
    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63


state 74

   71 cont_ids: cont_ids COMA . ID

    ID  shift, and go to state 101


state 75

   70 let: LET_SIM $@18 cont_ids OP_IGUAL . P_A cont_exp P_C

    P_A  shift, and go to state 102


state 76

   18 lista_ids: ID .

    $default  reduce using rule 18 (lista_ids)


state 77

   15 declaracion: INT DOSPUNTOS lista_ids .
   19 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  shift, and go to state 103

    $default  reduce using rule 15 (declaracion)


state 78

   16 declaracion: FLOAT DOSPUNTOS lista_ids .
   19 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  shift, and go to state 103

    $default  reduce using rule 16 (declaracion)


state 79

   17 declaracion: STRING DOSPUNTOS lista_ids .
   19 lista_ids: lista_ids . PUNTO_Y_COMA ID

    PUNTO_Y_COMA  shift, and go to state 103

    $default  reduce using rule 17 (declaracion)


state 80

   42 condicion: P_A condicion $@10 . P_C AND P_A condicion P_C

    P_C  shift, and go to state 104


state 81

   44 condicion: P_A condicion $@11 . P_C OR P_A condicion P_C

    P_C  shift, and go to state 105


state 82

   63 factor: P_A expresion P_C .

    $default  reduce using rule 63 (factor)


state 83

   46 condicion: NOT expresion $@12 . CMP_MAY expresion

    CMP_MAY  shift, and go to state 106


state 84

   48 condicion: NOT expresion $@13 . CMP_MEN expresion

    CMP_MEN  shift, and go to state 107


state 85

   50 condicion: NOT expresion $@14 . CMP_MAYI expresion

    CMP_MAYI  shift, and go to state 108


state 86

   52 condicion: NOT expresion $@15 . CMP_MENI expresion

    CMP_MENI  shift, and go to state 109


state 87

   54 condicion: NOT expresion $@16 . CMP_DIST expresion

    CMP_DIST  shift, and go to state 110


state 88

   56 condicion: NOT expresion $@17 . CMP_IGUAL expresion

    CMP_IGUAL  shift, and go to state 111


state 89

   25 decision: IF P_A condicion P_C L_A . sentencia L_C
   28         | IF P_A condicion P_C L_A . sentencia L_C $@2 ELSE $@3 L_A sentencia L_C

    DEFVAR   shift, and go to state 1
    DISPLAY  shift, and go to state 2
    GET      shift, and go to state 3
    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    ID       shift, and go to state 6
    LET_SIM  shift, and go to state 7

    sentencia   go to state 112
    asignacion  go to state 11
    salida      go to state 12
    entrada     go to state 13
    iteracion   go to state 14
    decision    go to state 15
    let         go to state 16


state 90

   57 expresion: expresion OP_SUM termino .
   60 termino: termino . OP_MUL factor
   61        | termino . OP_DIV factor

    OP_DIV  shift, and go to state 70
    OP_MUL  shift, and go to state 71

    $default  reduce using rule 57 (expresion)


state 91

   58 expresion: expresion OP_RES termino .
   60 termino: termino . OP_MUL factor
   61        | termino . OP_DIV factor

    OP_DIV  shift, and go to state 70
    OP_MUL  shift, and go to state 71

    $default  reduce using rule 58 (expresion)


state 92

   30 condicion: expresion $@4 CMP_MAY . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 113
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 93

   32 condicion: expresion $@5 CMP_MEN . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 114
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 94

   34 condicion: expresion $@6 CMP_MAYI . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 115
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 95

   36 condicion: expresion $@7 CMP_MENI . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 116
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 96

   38 condicion: expresion $@8 CMP_DIST . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 117
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 97

   40 condicion: expresion $@9 CMP_IGUAL . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 118
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 98

   61 termino: termino OP_DIV factor .

    $default  reduce using rule 61 (termino)


state 99

   60 termino: termino OP_MUL factor .

    $default  reduce using rule 60 (termino)


state 100

   24 iteracion: WHILE P_A condicion P_C L_A . sentencia L_C

    DEFVAR   shift, and go to state 1
    DISPLAY  shift, and go to state 2
    GET      shift, and go to state 3
    IF       shift, and go to state 4
    WHILE    shift, and go to state 5
    ID       shift, and go to state 6
    LET_SIM  shift, and go to state 7

    sentencia   go to state 119
    asignacion  go to state 11
    salida      go to state 12
    entrada     go to state 13
    iteracion   go to state 14
    decision    go to state 15
    let         go to state 16


state 101

   71 cont_ids: cont_ids COMA ID .

    $default  reduce using rule 71 (cont_ids)


state 102

   70 let: LET_SIM $@18 cont_ids OP_IGUAL P_A . cont_exp P_C

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 120
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45
    cont_exp           go to state 121


state 103

   19 lista_ids: lista_ids PUNTO_Y_COMA . ID

    ID  shift, and go to state 122


state 104

   42 condicion: P_A condicion $@10 P_C . AND P_A condicion P_C

    AND  shift, and go to state 123


state 105

   44 condicion: P_A condicion $@11 P_C . OR P_A condicion P_C

    OR  shift, and go to state 124


state 106

   46 condicion: NOT expresion $@12 CMP_MAY . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 125
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 107

   48 condicion: NOT expresion $@13 CMP_MEN . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 126
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 108

   50 condicion: NOT expresion $@14 CMP_MAYI . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 127
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 109

   52 condicion: NOT expresion $@15 CMP_MENI . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 128
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 110

   54 condicion: NOT expresion $@16 CMP_DIST . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 129
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 111

   56 condicion: NOT expresion $@17 CMP_IGUAL . expresion

    CONST_REAL  shift, and go to state 36
    CONST_INT   shift, and go to state 37
    P_A         shift, and go to state 48
    ID          shift, and go to state 40

    expresion          go to state 130
    termino            go to state 43
    factor             go to state 44
    constanteNumerica  go to state 45


state 112

   25 decision: IF P_A condicion P_C L_A sentencia . L_C
   28         | IF P_A condicion P_C L_A sentencia . L_C $@2 ELSE $@3 L_A sentencia L_C

    L_C  shift, and go to state 131


state 113

   30 condicion: expresion $@4 CMP_MAY expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 30 (condicion)


state 114

   32 condicion: expresion $@5 CMP_MEN expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 32 (condicion)


state 115

   34 condicion: expresion $@6 CMP_MAYI expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 34 (condicion)


state 116

   36 condicion: expresion $@7 CMP_MENI expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 36 (condicion)


state 117

   38 condicion: expresion $@8 CMP_DIST expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 38 (condicion)


state 118

   40 condicion: expresion $@9 CMP_IGUAL expresion .
   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63

    $default  reduce using rule 40 (condicion)


state 119

   24 iteracion: WHILE P_A condicion P_C L_A sentencia . L_C

    L_C  shift, and go to state 132


state 120

   57 expresion: expresion . OP_SUM termino
   58          | expresion . OP_RES termino
   74 cont_exp: expresion .

    OP_SUM  shift, and go to state 62
    OP_RES  shift, and go to state 63
